--- a/projects/music.html
+++ b/projects/music.html
@@ -33,6 +33,7 @@
 		    <h2 style="color: #00a8ff" id="originals">
 				Originals
 		    </h2>
+            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px">
             <audio controls>
               <source src="/projects/music/Magnogen - Automate.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -41,7 +42,9 @@
             <div class="sub">
             	Magnogen - Automate
             </div>
-            <br>
+            A simple Alan-Walker-style track with a tempo change.
+            <br><br>
+            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px">
             <audio controls>
               <source src="/projects/music/Magnogen - Breeze.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -49,7 +52,9 @@
             <div class="sub">
             	Magnogen - Breeze
             </div>
-            <br>
+            A calmer track.
+            <br><br>
+            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px">
             <audio controls>
               <source src="/projects/music/Magnogen - Renegade.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -57,7 +62,9 @@
             <div class="sub">
             	Magnogen - Renegade
             </div>
-            <br>
+            Inspired by dubstep.
+            <br><br>
+            <img src="/projects/music/YoutuBeats.png" alt="YoutuBeats album art" width="50px" height="50px">
             <audio controls>
               <source src="/projects/music/Magnogen - Vsauce.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -66,7 +73,8 @@
             <div class="sub">
             	Magnogen - Vsauce
             </div>
-            <br>
+            A track with samples from Vsauce, quite spacey.
+            <br><br>
             <h2 style="color: #00a8ff" id="remixes">
 				Remixes
 		    </h2>
@@ -78,7 +86,8 @@
             <div class="sub">
             	Zyzyx - Scars (Magnogen remix)
             </div>
-            <br>
+            Zyzyx hosted a remix competition recently, I thought I'd take advantage of it...
+            <br><br>
 	    </div>
 	</body>
 </html>
