--- a/src/navbar.html
+++ b/src/navbar.html
@@ -96,7 +96,7 @@ body {
   <a href="/" class="home">Home</a>
   <a href="/contributors/" class="contrib">Contributors</a>
   <div class="dropdown">
-    <button class="dropbtn">Education
+    <button class="dropbtn edu">Education
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -116,7 +116,7 @@ body {
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Projects
+    <button class="dropbtn projects">Projects
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
