--- a/edu/maths/complexNumbers.html
+++ b/edu/maths/complexNumbers.html
@@ -17,7 +17,7 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.dropdown {
+			.edu {
 				background-color: #0000a8;
 			}
             .sub {
