--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,9 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.projects { background-color: #0000a8; }
+			.projects {
+				background-color: #0000a8;
+			}
 		</style>
 	</head>
 	<body>
