--- a/projects/music.html
+++ b/projects/music.html
@@ -9,14 +9,17 @@
 		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		
 		<style>
-            body {
+            		body {
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-            .sub {
-            	color: #00dfff;
-            	font-weight:bold;
-            }
+            		.sub {
+            			color: #00dfff;
+            			font-weight:bold;
+            		}
+			.projects {
+				background-color: #0000a8;
+			}
 		</style>
 	</head>
 	<body>
