--- a/projects/stories/perpetualNight.html
+++ b/projects/stories/perpetualNight.html
@@ -12,10 +12,13 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-            .sub {
-            	color: #00dfff;
-            	font-weight:bold;
-            }
+            		.sub {
+            			color: #00dfff;
+            			font-weight:bold;
+            		}
+			.projects {
+				background-color: #0000a8;
+			}
 		</style>
 	</head>
 	<body>
