--- a/projects/music.html
+++ b/projects/music.html
@@ -78,6 +78,17 @@
             </div>
             A track with samples from Vsauce, quite spacey.
             <br><br>
+	    <img src="/projects/music/Emotions.png" alt="Emotions album art" width="50px" height="50px">
+            <audio controls>
+              <source src="/projects/music/Magnogen - Laughter.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
+            <br>
+            <div class="sub">
+            	Magnogen - Laughter
+            </div>
+            Haha... Mario... So funny...
+            <br><br>
             <h2 style="color: #00a8ff" id="remixes">
 				Remixes
 		    </h2>
