--- a/src/navbar.html
+++ b/src/navbar.html
@@ -130,7 +130,7 @@ body {
         </div>
         <div class="column">
           <h3>Music</h3>
-          <a href="/projects/music.html#orginals">Originals</a>
+          <a href="/projects/music.html#originals">Originals</a>
           <a href="/projects/music.html#remixes">Remixes</a>
         </div>
       </div>
