--- a/projects/music.html
+++ b/projects/music.html
@@ -67,6 +67,17 @@
             </div>
             Inspired by dubstep.
             <br><br>
+	    	<img src="/projects/music/Phyzix.png" alt="Emotions album art" width="50px" height="50px">
+            <audio controls>
+              <source src="/projects/music/Magnogen - Continuum.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            </audio>
+            <br>
+            <div class="sub">
+            	Magnogen - Continuum
+            </div>
+            A relatively slow track, inspired by another one of my tracks...
+            <br><br>
             <img src="/projects/music/YoutuBeats.png" alt="YoutuBeats album art" width="50px" height="50px">
             <audio controls>
               <source src="/projects/music/Magnogen - Vsauce.mp3" type="audio/mpeg">
