--- a/src/navbar.html
+++ b/src/navbar.html
@@ -111,6 +111,7 @@ body {
         <div class="column">
           <h3>Computer Science</h3>
           <a href="/edu/compSci/data.html">Data</a>
+          <a href="/edu/compSci/policies.html">Network policies</a>
         </div>
       </div>
     </div>
