--- a/projects/stories/perpetualNight.html
+++ b/projects/stories/perpetualNight.html
@@ -28,9 +28,9 @@
 			w3.includeHTML();
 		</script>
 		<div style="padding: 0% 10% 12% 10%;color: #eeeeee;">
-            <h2 style="text-align: center; color: #00a8ff">
+            <h1 style="text-align: center;">
 				The perpetual night
-		    </h2>
+		    </h1>
             The sky: dim, dark, eerie… The black void seemed to stretch out to eternity. The moon: waning, slowly shrinking back into the dark pit of the sky. The floor: cobbled, uncomfortable, and yet there was a woman lying there – her back resting against the stump of a tree. If you were to get closer, you may hear the faint snore emanating from her throat. If you were to get closer still, you may hear a small voice shouting inside her head: “Wake up! Wake up!” The voice belonged to a woman who looked remarkably similar to the dreamer – dark brown hair, navy eyes, pale (but slightly tanned) skin, however there were a few striking differences: the feline she had tucked under her arm seemed fearful – a wide-eyed expression on its face, her clothes were torn – a diagonal slash had cut her blouse from left to right; the remains frayed with loose threads flailing in the breeze, her jeans had gaping holes – showing bare skin beneath and her left shoe had been lost. The cat began to yowl and, when it did, everything disappeared in order to be replaced by the physical world.<br>
 <br>
 “AHH!” The newly-awakened dreamer shouted as soon as she opened her eyes.<br>
