--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<base href="https://magnogen.github.io/">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="/src/style.css">
 <style>
 * {
     box-sizing: border-box;
