--- a/src/navbar.html
+++ b/src/navbar.html
@@ -132,9 +132,8 @@ body {
           <a href="/projects/stories/perpetualNight.html">The perpetual night</a>
         </div>
         <div class="column">
-          <h3>Music</h3>
-          <a href="/projects/music.html#originals">Originals</a>
-          <a href="/projects/music.html#remixes">Remixes</a>
+          <h3>Other</h3>
+          <a href="/projects/music.html">My music</a>
         </div>
       </div>
     </div>
