--- a/about/index.html
+++ b/about/index.html
@@ -12,8 +12,20 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.contrib { background-color: #0000a8; }
-			h4 > div.line_gap { padding: 0.1em 0 0.1em 0; }
+			.contrib {
+            	background-color: #0000a8;
+            }
+			.people { 
+    			position: relative;
+			}
+            .people .text {
+                position: relative;
+    			top: 25%;
+                transform: translateY(75%);
+            }
+            .people img {
+                float: left;
+            }
 		</style>
 	</head>
 	<body>
@@ -23,25 +35,27 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;color: #EEEEEE;">
+		<div style="padding: 0% 10% 12% 10%;color: #EEEEEE;">
 			<h1>
-				<span style="padding-top: 0.5em;">
-					Contributors
-				</span>
+				About this website
 			</h1>
-			<h3>
-				Here is a list of people who have contributed to this website:
+			<h3 class="sub">
+				Contributors
 			</h3>
-			<h4>
-				- hydronesium [<a href="/contributors/hydronesium.html">Data</a>] 
-				<div class="line_gap"></div>
-				- user-e [<a href="/contributors/user-e.html">Data</a>]
-				<div class="line_gap"></div>
-				- jimbob123x [<a href="/contributors/jimbob123x.html">Data</a>]
-				<div class="line_gap"></div>
-				- TomIsTheBestAtEverything(WhichIncludesDragons)
-				[<a href="/contributors/Tom_TheBestAtDragonsAndEverything.html">Data</a>]
-			</h4>
+            <div class="people">
+				<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" width="50px" height="50px"> 
+                <div class="text">
+                	hydronesium [<i>Developer</i>]
+                </div>
+            </div>
+			<br><br>
+			<div class="people">
+				<img src="/about/user-e.jpg" alt="user-e profile picture" width="50px" height="50px"> 
+                <div class="text">
+                	user-e [<i>Developer</i>]
+                </div>
+            </div>
+            </h4>
 		</div>
   	</body>
 </html>
