--- a/src/navbar.html
+++ b/src/navbar.html
@@ -96,7 +96,7 @@ body {
 
 <div class="navbar">
   <a href="/" class="home">Home</a>
-  <a href="/contributors/" class="contrib">Contributors</a>
+  <a href="/about/" class="contrib">About</a>
   <div class="dropdown">
     <button class="dropbtn edu">Education
       <i class="fa fa-caret-down"></i>
