--- a/src/navbar.html
+++ b/src/navbar.html
@@ -138,6 +138,7 @@ body {
       </div>
     </div>
   </div>
+  <img src="/src/GitHub_Logo_White.png" alt="GitHub" height="100%"> 
 </div>
 <br><br><br>
 </body>
