--- a/src/navbar.html
+++ b/src/navbar.html
@@ -88,9 +88,9 @@ body {
 </head>
 <body>
 <div class="navbar">
-  <a href="/" class="home">Home</a>
-  <a href="/about/" class="contrib">About</a>
-  <div class="dropdown">
+  <a href="/" class="home" height="100%">Home</a>
+  <a href="/about/" class="contrib" height="100%">About</a>
+  <div class="dropdown" height="100%">
     <button class="dropbtn edu">Education
       <i class="fa fa-caret-down"></i>
     </button>
@@ -111,7 +111,7 @@ body {
       </div>
     </div>
   </div>
-  <div class="dropdown">
+  <div class="dropdown" height="100%">
     <button class="dropbtn projects">Projects
       <i class="fa fa-caret-down"></i>
     </button>
@@ -131,8 +131,10 @@ body {
       </div>
     </div>
   </div>
-  <a href="https://github.com/Magnogen/magnogen.github.io/" style="float: right; margin: 0px 5px; padding: 0px 5px">
-  	<img src="/src/GitHub_Logo_White.png" alt="GitHub" height="50vh">
+  <a href="https://github.com/Magnogen/magnogen.github.io/" style="float: right; margin: 0px 5px; padding: 0px 5px; height: 50px">
+  	<abbr title="Source code - GitHub">
+  		<img src="/src/GitHub_Logo_White.png" alt="GitHub" height="100%">
+    </abbr>
   </a>
 </div>
 <br><br><br>
