--- a/src/navbar.html
+++ b/src/navbar.html
@@ -68,7 +68,7 @@ body {
     background-color: #ccc;
     height: 250px;
 }
-.column a :not(.nopage) {
+.column a {
     float: none;
     color: #000000;
     padding: 16px;
@@ -76,7 +76,7 @@ body {
     display: block;
     text-align: left;
 }
-.column a:hover :not(.nopage) {
+.column a:hover {
     background-color: #dddddd;
 }
 .row:after {
