--- a/src/navbar.html
+++ b/src/navbar.html
@@ -61,14 +61,21 @@ body {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-.column {
+.column-edu {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    background-color: #ccc;
+    height: 250px;
+}
+.column-proj {
     float: left;
     width: 50%;
     padding: 10px;
     background-color: #ccc;
     height: 250px;
 }
-.column a {
+.column-edu a {
     float: none;
     color: #000000;
     padding: 16px;
@@ -76,7 +83,18 @@ body {
     display: block;
     text-align: left;
 }
-.column a:hover {
+.column-proj a {
+    float: none;
+    color: #000000;
+    padding: 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+.column-edu a:hover {
+    background-color: #dddddd;
+}
+.column-proj a:hover {
     background-color: #dddddd;
 }
 .row:after {
@@ -91,7 +109,7 @@ body {
   <a href="/" class="home" height="100%">Home</a>
   <a href="/about/" class="contrib" height="100%">About</a>
   <div class="dropdown" height="100%">
-    <button class="dropbtn edu">Education
+    <button class="dropbtn">Education
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -99,11 +117,15 @@ body {
         <h2>Education topics</h2>
       </div>   
       <div class="row">
-        <div class="column">
+        <div class="column-edu">
           <h3>Maths</h3>
           <a href="/edu/maths/complexNumbers.html">Complex numbers</a>
         </div>
-        <div class="column">
+        <div class="column-edu">
+          <h3>Chemistry</h3>
+          <a href="/edu/chem/alloys.html">Alloys</a>
+        </div>
+        <div class="column-edu">
           <h3>Computer Science</h3>
           <a href="/edu/compSci/data.html">Data</a>
           <a href="/edu/compSci/policies.html">Network policies</a>
@@ -120,11 +142,11 @@ body {
         <h2>My projects</h2>
       </div>   
       <div class="row">
-        <div class="column">
+        <div class="column-proj">
           <h3>Stories</h3>
           <a href="/projects/stories/perpetualNight.html">The perpetual night</a>
         </div>
-        <div class="column">
+        <div class="column-proj">
           <h3>Other</h3>
           <a href="/projects/music.html">My music</a>
         </div>
