--- a/about/index.html
+++ b/about/index.html
@@ -15,16 +15,9 @@
 			.contrib {
             	background-color: #0000a8;
             }
-			.people { 
-    			position: relative;
-			}
-            .people .text {
-                position: relative;
-    			top: 25%;
-                transform: translateY(75%);
-            }
-            .people img {
-                float: left;
+            .about-person {
+            	float: right;
+                width: 75%
             }
 		</style>
 	</head>
@@ -42,20 +35,44 @@
 			<h3 class="sub">
 				Contributors
 			</h3>
-            <div class="people">
-				<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" width="50px" height="50px"> 
-                <div class="text">
-                	hydronesium [<i>Developer</i>]
-                </div>
-            </div>
+			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" width="50px" height="50px" onclick="showHydronesium()">
+            <div id="about-person" class="about-person"></div>
 			<br><br>
-			<div class="people">
-				<img src="/about/user-e.jpg" alt="user-e profile picture" width="50px" height="50px"> 
-                <div class="text">
-                	user-e [<i>Developer</i>]
-                </div>
-            </div>
+			<img src="/about/user-e.jpg" alt="user-e profile picture" width="50px" height="50px" onclick="showUserE()">
             </h4>
 		</div>
   	</body>
+    <script>
+        function showHydronesium() {
+            document.getElementById("about-person").innerHTML = "\
+            	<div style=\"font-size: 20px;color: #00a8ff;\">hydronesium</div> \
+                <i>Developer</i>\
+            ";
+            
+        }
+        function showUserE() {
+            document.getElementById("about-person").innerHTML = "\
+            	<div style=\"font-size: 20px;color: #00a8ff;\">user-e</div> \
+                <i>Developer</i><br><br> \
+                Website: <a href=\"http://192.168.1.77/a/\"> \
+					my Raspberry Pi server \
+					<span style=\"font-style: italic;\">(non-public)</span> \
+				</a><br> \
+                Scratch profile: <a href=\"https://scratch.mit.edu/users/user-e/\"> \
+					user-e \
+				</a><br> \
+                Google+ page: <a href=\"https://plus.google.com/107507296915460932126\"> \
+						Edward J \
+				</a><br> \
+                Github: <a href=\"https://github.com/user-e\"> \
+						user-e \
+				</a><br><br> \
+                Hello, I’m someone called Edward.<br> \
+				I don't know much about Github and version control systems \
+				but I'm quite good at programming and maths. \
+				I'm going to do Computing at A level, not taking the GCSE. \
+				Here to help out with the webpage making, using my skills. \
+            ";
+        }
+    </script>
 </html>
