--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Magnogen - Contributors
+			Magnogen - About
 		</title>
 		<base href="https://magnogen.github.io/">
 		<link rel="icon" href="/src/logo_icon.png">
