--- a/src/navbar.html
+++ b/src/navbar.html
@@ -127,6 +127,7 @@ body {
         </div>
         <div class="column-edu">
           <h3>Computer Science</h3>
+          <a href="/edu/compSci/programming.html">Programming</a>
           <a href="/edu/compSci/data.html">Data</a>
           <a href="/edu/compSci/policies.html">Network policies</a>
         </div>
