--- a/edu/compSci/programming.html
+++ b/edu/compSci/programming.html
@@ -112,7 +112,7 @@
             <br>
             <div class="sub">
             	More examples
-            </div><br>
+            </div>
             This sub-program finds the mean value of all the values in the list given.<br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>findMeanOf</b></span>(inputList):<br>
