--- a/edu/compSci/programming.html
+++ b/edu/compSci/programming.html
@@ -73,12 +73,14 @@
             	How to use it
             </div>
             In python, you can define a sub-program with the
-            'def' command. You use it like so:<br><br>
+            'def' command. You use it like so:<br>
+            <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>mySubProgram</b></span>(<i>arguments</i>):<br>
                 2| &nbsp&nbsp&nbsp&nbsp<span style="color: #4FAB5B;"><i>#Code to be
                 executed when sub-program is called</i></span>
-            </div><br><br>
+            </div><br>
+            <br>
             You can replace the "mySubProgram" with anything you wish to call your sub
             program. And I'll talk about the "<i>arguments</i>" later on. After line 1, you
             can type out any code you wish to run when the sub-program is called.<br>
@@ -90,30 +92,57 @@
             perform more tasks when compared to when it doesn't have any of these little
             rascals. As soon as you use an argument in the subprogram, this makes it a
             function, instead of a procedure. You can 'reference' an argument in the code
-            by treating it as a variable. For example:<br><br>
+            by treating it as a variable. For example:<br>
+            <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>test</b></span>(input1):<br>
                 2| &nbsp&nbsp&nbsp&nbsp<span style="color: #003AFF;">print</span>(input1)
-            </div><br><br>
-            The code when written like this:
-            <br><br>
+            </div><br>
+            <br>
+            The code when written like this:<br>
+            <br>
             <div class="num">
             	1| test("Hello World!")
-            </div><br><br>
-            Will output this:
-            <br><br>
+            </div><br>
+            <br>
+            Will output this:<br>
+            <br>
             <div class="num">
             	>>><br>
             	<span style="color: #888888;">Hello World!</span><br>
                 >>>
-            </div><br><br>
+            </div><br>
+            <br>
             Because the string being passed into the sub-program, and the subprogram prints
             out the string with the 'print' command.<br>
             <br>
-            <div class="sub">
+            There is a problem though, if the coder doesn't provide any data for the
+            argument, there will be an error (a TypeError to be exact), and the program 
+            will break. You can fix this by setting the argument to a default value, this
+            value will then be used as the argument, if there isn't one given. Example:<br>
+            <br>
+            <div class="num">
+            	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>test</b></span>(input1="You forgot an argument!"):<br>
+                2| &nbsp&nbsp&nbsp&nbsp<span style="color: #003AFF;">print</span>(input1)
+            </div><br><br>
+            Then, if the coder types the following code:<br>
+            <br>
+            <div class="num">
+            	1| test()
+            </div><br><br>
+            The program will output this:<br>
+            <br>
+            <div class="num">
+            	>>><br>
+            	<span style="color: #888888;">You forgot an argument!</span><br>
+                >>>
+            </div><br>
+            <br>
+            <div class="sub" id="examples">
             	More examples
             </div>
             This sub-program finds the mean value of all the values in the list given.<br>
+            <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>findMeanOf</b></span>(inputList):<br>
                 2| &nbsp&nbsp&nbsp total = <span style="color: #888888;">0</span><br>
@@ -121,7 +150,23 @@
                 4| &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp total = total + <span style="color: #003AFF;">int</span>(inputList[i])<br>
                 5| &nbsp&nbsp&nbsp total = total / <span style="color: #003AFF;">len</span>(inputList)<br>
                 6| &nbsp&nbsp&nbsp <span style="color: #003AFF;">return</span> total
-            </div><br><br>
+            </div><br>
+            <br>
+            This sub-program converts celsius to fahrenheit.<br>
+            <br>
+            <div class="num">
+            	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>fahrenheit</b></span>(temperature):<br>
+    			2| &nbsp&nbsp&nbsp <span style="color: #003AFF;">return</span> (temperature * <span style="color: #888888;">9</span> / <span style="color: #888888;">5</span>) + <span style="color: #888888;">32</span>
+            </div><br>
+            <br>
+            This sub-program greets a person. If the name is not entered, it will just
+            greet everyone.<br>
+            <br>
+            <div class="num">
+            	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>greet</b></span>(name="everybody"):<br>
+    			2| &nbsp&nbsp&nbsp <span style="color: #003AFF;"><i>""" Greets a person """</i></span><br>
+    			3| &nbsp&nbsp&nbsp print("Hello " + name + "!")<br>
+            </div>
 	    </div>
 	</body>
 </html>
