--- a/edu/compSci/programming.html
+++ b/edu/compSci/programming.html
@@ -205,8 +205,8 @@
             And here is the reference:<br>
             <br>
             <div class="num">
-            	1| myClass.mySubProgram1() <span style="color: #1C7828;">#Calls mySubProgram1 sub-program under myClass class</span><br>
-                2| myClass.mySubProgram2() <span style="color: #1C7828;">#Calls mySubProgram2 sub-program under myClass class</span>
+            	1| myClass.mySubProgram1() <span style="color: #1C7828;">#Calls 'mySubProgram1' sub-program under 'myClass' class</span><br>
+                2| myClass.mySubProgram2() <span style="color: #1C7828;">#Calls 'mySubProgram2' sub-program under 'myClass' class</span>
             </div><br>
             <br>
             Then, once the program is run, it will profuce this output:<br>
