--- a/edu/compSci/programming.html
+++ b/edu/compSci/programming.html
@@ -209,7 +209,7 @@
                 2| myClass.mySubProgram2() <span style="color: #1C7828;">#Calls 'mySubProgram2' sub-program under 'myClass' class</span>
             </div><br>
             <br>
-            Then, once the program is run, it will profuce this output:<br>
+            Then, once the program is run, it will produce this output:<br>
             <br>
             <div class="num">
             	>>><br>
