--- a/edu/compSci/programming.html
+++ b/edu/compSci/programming.html
@@ -65,9 +65,7 @@
 		    <h2 style="color: #00a8ff" id="subPrograms">
 				Sub-programs
 		    </h2>
-			Sub-programs are used when you don't want to type out the same code repeatedly
-            throughout your program. There are two different types of sub-program:
-            procedures and functions.<br>
+			Sub-programs are used when you don't want to type out the same code repeatedly throughout your program. There are two different types of sub-program: procedures and functions.<br>
             <br>
             <div class="sub">
             	How to use them
@@ -77,22 +75,15 @@
             <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>mySubProgram</b></span>(<i>arguments</i>):<br>
-                2| &nbsp&nbsp&nbsp&nbsp<span style="color: #1C7828;"><i>#Code to be
-                executed when sub-program is called</i></span>
+                2| &nbsp&nbsp&nbsp&nbsp<span style="color: #1C7828;"><i>#Code to be executed when sub-program is called</i></span>
             </div><br>
             <br>
-            You can replace the "mySubProgram" with anything you wish to call your sub
-            program. And I'll talk about the "<i>arguments</i>" later on. After line 1, you
-            can type out any code you wish to run when the sub-program is called.<br>
+            You can replace the "mySubProgram" with anything you wish to call your sub program. And I'll talk about the "<i>arguments</i>" later on. After line 1, you can type out any code you wish to run when the sub-program is called.<br>
             <br>
             <div class="sub">
             	Arguments - what are they?
             </div>
-            Arguments are used to you can pass data into the subprogram. This allows it to
-            perform more tasks when compared to when it doesn't have any of these little
-            rascals. As soon as you use an argument in the subprogram, this makes it a
-            function, instead of a procedure. You can 'reference' an argument in the code
-            by treating it as a variable. For example:<br>
+            Arguments are used to you can pass data into the subprogram. This allows it to perform more tasks when compared to when it doesn't have any of these little rascals. As soon as you use an argument in the subprogram, this makes it a function, instead of a procedure. You can 'reference' an argument in the code by treating it as a variable. For example:<br>
             <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>test</b></span>(input1):<br>
@@ -113,13 +104,9 @@
                 >>>
             </div><br>
             <br>
-            Because the string being passed into the sub-program, and the subprogram prints
-            out the string with the 'print' command.<br>
+            Because the string being passed into the sub-program, and the subprogram prints out the string with the 'print' command.<br>
             <br>
-            There is a problem though, if the coder doesn't provide any data for the
-            argument, there will be an error (a TypeError to be exact), and the program 
-            will break. You can fix this by setting the argument to a default value, this
-            value will then be used as the argument, if there isn't one given. Example:<br>
+            There is a problem though, if the coder doesn't provide any data for the argument, there will be an error (a TypeError to be exact), and the program  will break. You can fix this by setting the argument to a default value, this value will then be used as the argument, if there isn't one given. Example:<br>
             <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>test</b></span>(input1="You forgot an argument!"):<br>
@@ -137,6 +124,43 @@
             	<span style="color: #888888;">You forgot an argument!</span><br>
                 >>>
             </div><br>
+            <br>
+            <div class="sub">
+            	What does 'return' do?
+            </div>
+            The keyword "return" is used so that, when called, the program will output a responce back to the place it was called from. For example:<br>
+            <br>
+            <div class="num">
+            	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>returnTheNumberFive</b></span>():<br>
+    			2| &nbsp&nbsp&nbsp <span style="color: #003AFF;">return</span> <span style="color: #1C7828;">"5"</span><br>
+            </div><br>
+            <br>
+            Then, when you run this code:<br>
+            <br>
+            <div class="num">
+            	1| print(returnTheNumberFive())
+            </div><br>
+            <br>
+            This will be the result:<br>
+            <br>
+            <div class="num">
+            	>>><br>
+            	<span style="color: #888888;">5</span><br>
+                >>>
+            </div><br>
+            <br>
+            <div class="sub">
+            	Docstrings
+            </div>
+            Docstrings are used when you want to give an explanation of what the sub-program does, you add them straight after the defining line, like so:<br>
+            <br>
+            <div class="num">
+            	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>triple</b></span>(num):<br>
+    			2| &nbsp&nbsp&nbsp <span style="color: #003AFF;"><i>""" returns the value in the brackets, multiplied by 3 """</i></span><br>
+    			3| &nbsp&nbsp&nbsp <span style="color: #003AFF;">return</span> num * <span style="color: #888888;">3</span><br>
+            </div><br>
+            <br>
+            Here, the docstring is given in the triple quote marks (""").<br>
             <br>
             <div class="sub" id="subProgramExamples">
             	More examples
@@ -159,8 +183,7 @@
     			2| &nbsp&nbsp&nbsp <span style="color: #003AFF;">return</span> (temperature * <span style="color: #888888;">9</span> / <span style="color: #888888;">5</span>) + <span style="color: #888888;">32</span>
             </div><br>
             <br>
-            This sub-program greets a person. If the name is not entered, it will just
-            greet everyone.<br>
+            This sub-program greets a person. If the name is not entered, it will just greet everyone.<br>
             <br>
             <div class="num">
             	1| <span style="color: #003AFF;">def</span> <span style="color: #888888;"><b>greet</b></span>(name="everybody"):<br>
@@ -170,8 +193,7 @@
             <h2 style="color: #00a8ff" id="classes">
 				Classes
 		    </h2>
-            Classes are used when you want to bind multiple sub-programs with a similar
-            topic together.<br>
+            Classes are used when you want to bind multiple sub-programs with a similar topic together.<br>
             <br>
             <div class="sub">
             	How to use them
@@ -180,19 +202,15 @@
             <br>
             <div class="num">
             	1| <span style="color: #003AFF;">class</span> <span style="color: #003AFF;"><b>myClass</b></span>:<br>
-                2| &nbsp&nbsp&nbsp&nbsp<span style="color: #1C7828;"><i>#Subprograms to be
-                binded together</i></span>
+                2| &nbsp&nbsp&nbsp&nbsp<span style="color: #1C7828;"><i>#Subprograms to be binded together</i></span>
             </div><br>
             <br>
-            You can replace the "myClass" with anything you wish to call your class. After
-            line 1, you can type out any sub-program you wish to run when the sub-program
-            is called within the class.<br>
+            You can replace the "myClass" with anything you wish to call your class. After line 1, you can type out any sub-program you wish to run when the sub-program is called within the class.<br>
             <br>
             <div class="sub">
             	How to call a class
             </div>
-            But how do you call a sub-program that is referenced within a class? The answer
-            is quite simple, actually. Here is the class:<br>
+            But how do you call a sub-program that is referenced within a class? The answer is quite simple, actually. Here is the class:<br>
             <br>
             <div class="num">
             	1| <span style="color: #003AFF;">class</span> <span style="color: #003AFF;"><b>myClass</b></span>:<br>
