--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,24 @@
         function showHydronesium() {
             document.getElementById("about-person").innerHTML = "\
             	<div style=\"font-size: 20px;color: #00a8ff;\">hydronesium</div> \
-                <i>Developer</i>\
+                <i>Developer</i><br><br> \
+                Website: <a href=\"http://magnogen.github.io/\"> \
+					Magnogen - Home \
+				</a><br> \
+                Scratch profile: <a href=\"https://scratch.mit.edu/users/hydronesium/\"> \
+					hydronesium on Scratch \
+				</a><br> \
+                YouTube channel: <a href=\"https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw\"> \
+						hydronesium \
+				</a><br> \
+                Github: <a href=\"https://github.com/Magnogen\"> \
+						Magnogen \
+				</a><br><br> \
+                Hi there, I'm Connor and I've always wanted a website and now \
+                that I've got one, I'm so happy! I'm going to do maths and \
+                computing at A level buecause I quite like them currently. \
+                I enjoy making music and writing stories (you can see them \
+                under the projects tab in the navigation bar). \
             ";
             
         }
