--- a/projects/music.html
+++ b/projects/music.html
@@ -30,76 +30,15 @@
 		</script>
 		
 		<div style="padding: 0% 10% 12% 10%;color: #EEEEEE;">
-			<h1 style="text-align: center;color: #0064ff">
-				My music
+			<h1 style="text-align: center;">
+				Music
 			</h1>
 		    <h2 style="color: #00a8ff" id="originals">
-				Originals
+				Albums
 		    </h2>
-            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px">
-            <audio controls>
-              <source src="/projects/music/Magnogen - Automate.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-            </audio>
-            <br>
-            <div class="sub">
-            	Magnogen - Automate
-            </div>
-            A simple Alan-Walker-style track with a tempo change.
-            <br><br>
-            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px">
-            <audio controls>
-              <source src="/projects/music/Magnogen - Breeze.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-            </audio>
-            <div class="sub">
-            	Magnogen - Breeze
-            </div>
-            A calmer track.
-            <br><br>
-            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px">
-            <audio controls>
-              <source src="/projects/music/Magnogen - Renegade.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-            </audio>
-            <div class="sub">
-            	Magnogen - Renegade
-            </div>
-            Inspired by dubstep.
-            <br><br>
-	    	<img src="/projects/music/Phyzix.png" alt="Emotions album art" width="50px" height="50px">
-            <audio controls>
-              <source src="/projects/music/Magnogen - Continuum.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-            </audio>
-            <br>
-            <div class="sub">
-            	Magnogen - Continuum
-            </div>
-            A relatively slow track, inspired by another one of my tracks...
-            <br><br>
-            <img src="/projects/music/YoutuBeats.png" alt="YoutuBeats album art" width="50px" height="50px">
-            <audio controls>
-              <source src="/projects/music/Magnogen - Vsauce.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-            </audio>
-            <br>
-            <div class="sub">
-            	Magnogen - Vsauce
-            </div>
-            A track with samples from Vsauce, quite spacey.
-            <br><br>
-	    <img src="/projects/music/Emotions.png" alt="Emotions album art" width="50px" height="50px">
-            <audio controls>
-              <source src="/projects/music/Magnogen - Laughter.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-            </audio>
-            <br>
-            <div class="sub">
-            	Magnogen - Laughter
-            </div>
-            Haha... Mario... So funny...
-            <br><br>
+            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px"><br>
+            <img src="/projects/music/YoutuBeats.png" alt="YoutuBeats album art" width="50px" height="50px"><br>
+            <img src="/projects/music/Emotions.png" alt="Emotions album art" width="50px" height="50px">
             <h2 style="color: #00a8ff" id="remixes">
 				Remixes
 		    </h2>
