--- a/about/index.html
+++ b/about/index.html
@@ -35,8 +35,8 @@
 			<h3 class="sub">
 				Contributors
 			</h3>
+			<div id="about-person" class="about-person">Select a contributor...</div>
 			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" width="50px" height="50px" onclick="showHydronesium()">
-            <div id="about-person" class="about-person"></div>
 			<br><br>
 			<img src="/about/user-e.jpg" alt="user-e profile picture" width="50px" height="50px" onclick="showUserE()">
             </h4>
