--- a/projects/music.html
+++ b/projects/music.html
@@ -20,6 +20,10 @@
 			.projects {
 				background-color: #0000a8;
 			}
+            .songs {
+            	float: right;
+                width: 75%;
+            }
 		</style>
 	</head>
 	<body>
@@ -36,9 +40,10 @@
 		    <h2 style="color: #00a8ff" id="originals">
 				Albums
 		    </h2>
-            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px"><br>
-            <img src="/projects/music/YoutuBeats.png" alt="YoutuBeats album art" width="50px" height="50px"><br>
-            <img src="/projects/music/Emotions.png" alt="Emotions album art" width="50px" height="50px">
+            <div id="songs" class="songs">Select an album...</div>
+            <img src="/projects/music/Phyzix.png" alt="Phyzix album art" width="50px" height="50px" onclick="phizix()"><br>
+            <img src="/projects/music/YoutuBeats.png" alt="YoutuBeats album art" width="50px" height="50px" onclick="youtubeats()"><br>
+            <img src="/projects/music/Emotions.png" alt="Emotions album art" width="50px" height="50px" onclick="emotions()">
             <h2 style="color: #00a8ff" id="remixes">
 				Remixes
 		    </h2>
@@ -53,5 +58,23 @@
             Zyzyx hosted a remix competition recently, I thought I'd take advantage of it...
             <br><br>
 	    </div>
+        <script>
+        function phizix() {
+            document.getElementById("songs").innerHTML = "\
+            	<div style=\"font-size: 20px;color: #00a8ff;\">Phizix</div><br> \
+                Magnogen - Automate \
+            ";
+        }
+        function youtubeats() {
+            document.getElementById("songs").innerHTML = "\
+            	<div style=\"font-size: 20px;color: #00a8ff;\">YoutuBeats</div> \
+            ";
+        }
+        function emotions() {
+            document.getElementById("songs").innerHTML = "\
+            	<div style=\"font-size: 20px;color: #00a8ff;\">Emotions</div> \
+            ";
+        }
+    </script>
 	</body>
 </html>
