--- a/projects/music.html
+++ b/projects/music.html
@@ -62,7 +62,9 @@
         function phizix() {
             document.getElementById("songs").innerHTML = "\
             	<div style=\"font-size: 20px;color: #00a8ff;\">Phizix</div><br> \
-                Magnogen - Automate \
+                Magnogen - Automate<img src=\"/src/play.jpg\" style=\"float: right\" onclick=\"play_song(\"automate\")\"><br> \
+                Magnogen - Breeze<img src=\"/src/play.jpg\" style=\"float: right\" onclick=\"play_song(\"breeze\")\"><br> \
+                Magnogen - Renegade<img src=\"/src/play.jpg\" style=\"float: right\" onclick=\"play_song(\"renegade\")\"><br> \
             ";
         }
         function youtubeats() {
