--- a/projects/stories/spaghettiMonster.html
+++ b/projects/stories/spaghettiMonster.html
@@ -31,7 +31,8 @@
             <h1 style="text-align: center;">
 				        The spaghetti monster
 		        </h1>
-            Spaghetti
+            Spaghetti<br>
+            <br>
             <i>Influenced by Izzy Pearce (Yoyofoxdrawingstuff)</i>
 		</div>
 	</body>
