--- a/about/index.html
+++ b/about/index.html
@@ -39,6 +39,8 @@
 			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" width="50px" height="50px" onclick="showHydronesium()">
 			<br><br>
 			<img src="/about/user-e.jpg" alt="user-e profile picture" width="50px" height="50px" onclick="showUserE()">
+			<br><br>
+			<img src="/about/yoyofoxdrawingstuff.jpg" alt="yoyofox profile picture" width="50px" height="50px" onclick="showYoyofox()">
             </h4>
 		</div>
   	</body>
@@ -65,7 +67,6 @@
                 I enjoy making music and writing stories (you can see them \
                 under the projects tab in the navigation bar). \
             ";
-            
         }
         function showUserE() {
             document.getElementById("about-person").innerHTML = "\
@@ -89,6 +90,19 @@
 				but I'm quite good at programming and maths. \
 				I'm going to do Computing at A level, not taking the GCSE. \
 				Here to help out with the webpage making, using my skills. \
+            ";
+        }
+        function showYoyofox() {
+            document.getElementById("about-person").innerHTML = "\
+            	<div style=\"font-size: 20px;color: #00a8ff;\">Yoyofox</div> \
+                <i>Inspirational colleague</i><br><br> \
+                Website: <a href=\"https://magnogen.github.io/stupididit/\"> \
+					Yoyofox \
+				</a><br> \
+                Deviantart: <a href=\"https://yoyofoxdrawingstuff.deviantart.com/\"> \
+						yoyofoxdrawingstuff (Yoyofx) | Deviantart \
+				</a><br><br> \
+                 \
             ";
         }
     </script>
